TTK-17766 Fix JSON Unexpected string in JSON at position 2087.
fetch('https://pre-pr-up2u.teltek.es/paella/config.json?id=5ab36a95155c2fe0098b4568')
  .then(function(response) {
    return response.json();
  })
  .then(function(myJson) {
    console.log(myJson);
  });

--- a/Resources/views/Conf/conf.json.twig
+++ b/Resources/views/Conf/conf.json.twig
@@ -52,7 +52,7 @@
             "trimming": "MHAnnotationServiceTrimmingDataDelegate",
             "userInfo": "UserDataDelegate",
             "visualAnnotations": "VisualAnnotationsDataDelegate",
-            "footprints" : "{{ footprints }}"
+            "footprints" : "{{ footprints }}",
             "metadata":"VideoManifestMetadataDataDelegate",
             "cameraTrack":"TrackCameraDataDelegate"
         }
