--- a/Resources/public/paella/player/resources/style/style_light.css
+++ b/Resources/public/paella/player/resources/style/style_light.css
@@ -599,6 +599,13 @@ a.btn {
   background-position: -1600% -100%;
   pointer-events: all !important;
 }
+.arrow-slide-navigator-container {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
+  right: 0px;
+}
 .buttonPlugin.audioLanguages {
   text-align: center;
   background-position: -900% -200%;
@@ -1682,6 +1689,29 @@ svg rect {
 }
 .buttonPlugin.AirPlayButton.not-available {
   opacity: 0.4;
+}
+.buttonPlugin.legal {
+  pointer-events: all;
+  padding-right: 5px;
+  height: 20px;
+  text-align: right;
+  padding: 1px;
+  margin: 1px;
+  margin-right: 12px;
+  margin-top: 1px;
+  margin-bottom: 4px;
+  width: auto;
+}
+.buttonPlugin.legal a {
+  color: lightgrey !important;
+  text-decoration: underline !important;
+}
+.buttonPlugin.legal a:hover {
+  background-color: transparent !important;
+  font-weight: bold !important;
+}
+.buttonPlugin.legal:hover {
+  background-color: transparent !important;
 }
 .buttonPlugin.PIPModeButton {
   background-position: -1000% -100%;
