--- a/Resources/public/paella/player/resources/style/style_light_small.css
+++ b/Resources/public/paella/player/resources/style/style_light_small.css
@@ -2260,7 +2260,9 @@ a.btn {
   background-position: -200% 22%;
 }
 .buttonPlugin.playlistPlugin {
-  background-position: -89.5% -89%;
+  background-position: -88.3% -85.5%;
+  background-image: url(../images/paella_icons_light.png);
+  background-size: 720px 360px;
 }
 .buttonPluginPopUp.playlistPlugin {
   background-image: none;
