TTK-19456 design of paella player

--- a/Resources/views/Conf/conf.json.twig
+++ b/Resources/views/Conf/conf.json.twig
@@ -44,7 +44,7 @@
     "editor":{
         "enabled":false
     },
-    "defaultProfile":"slide_professor",
+    "defaultProfile":"slide_over_professor",
     "data":{
         "enabled":true,
         "dataDelegates":{
