--- a/Resources/views/PaellaPlayer/index.html.twig
+++ b/Resources/views/PaellaPlayer/index.html.twig
@@ -29,7 +29,7 @@
    {# Added while waiting for paella upstream #}
    video {
        background: black;
-       box-shadow: 0px 0px 6px #000;
+       box-shadow: 0 0 6px #000;
    }
 
    {# Added while waiting for paella fix TTK-16366 #}
@@ -50,6 +50,65 @@
      max-width: 400px;
      min-width: 200px;
      width: 30vw !important;
+   }
+
+   {% if object.isMultistream() %}
+       #playerContainer_controls {
+           display:block !important;
+           opacity:1 !important;
+       }
+
+
+       #playerContainer_controls_playback_timelinePluginContainer {
+           height: 15px !important;
+           bottom: 40px !important;
+           border-top:1px solid #EAEAEA;
+       }
+
+       #buttonPlugin12, #buttonPlugin7 {
+           display:none !important;
+       }
+
+
+       .frameControlItem {
+           width:65px !important;
+       }
+
+       .frameControlContainer {
+           height:60px !important;
+        }
+
+       .frameControl .navButton {
+           width:20px !important;
+           height: 20px !important;
+           top: 20px !important;
+       }
+
+       #buttonPlugin8_timeline {
+           height: 60px;
+           display: block !important;
+           border-top:1px solid #EAEAEA;
+           bottom:15px;
+       }
+
+       #playerContainer_videoContainer_container {
+           top:0 !important;
+       }
+
+   {% endif %}
+
+   #playerContainer_controls_playback {
+       height: 40px !important;
+   }
+
+   #playerContainer_controls_playback_playbackBar {
+       height: 3px !important;
+       background-color: #808080 !important;
+   }
+
+   .playbackBarFull {
+       background-color: rgb(255, 204, 0) !important;
+       background: linear-gradient(to bottom, rgb(255, 204, 0) 0%, rgb(255, 204, 0) 100%) !important;
    }
 
   {# touch scroll #305 and TTK-16059#}
