--- a/Resources/public/paella/player/resources/style/style_dark_small.css
+++ b/Resources/public/paella/player/resources/style/style_dark_small.css
@@ -2259,36 +2259,112 @@ a.btn {
 .buttonPlugin.flexSkip_Forward_30 {
   background-position: -200% 22%;
 }
-.buttonPlugin.playlistPlugin {
-  background-position: -88.3% -85.5%;
-  background-image: url(../images/paella_icons_light.png);
-  background-size: 720px 360px;
+.integratedDurationButton {
+  width: 112px !important;
+  color: white !important;
 }
-.buttonPluginPopUp.playlistPlugin {
-  background-image: none;
-  min-width: 40px;
-  width: 500%;
-  min-height: 40px;
-  max-height: 150px;
-  overflow: auto;
-  text-align: left;
+.integratedDurationButton .button-text {
+  color: white !important;
+  letter-spacing: 1px !important;
 }
-.buttonPluginPopUp.playlistPlugin .videobutton {
+.integratedDurationButton:hover {
+  background-color: transparent !important;
+}
+.simpleSoundButton {
+  display: block;
+  width: 100px;
+  background: transparent !important;
+}
+.range {
+  width: 70%;
+  float: right;
+}
+.range input[type=range] {
+  display: block;
+  margin: 13px 0;
+}
+/* Scrollbar - Google Chrome */
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 5px !important;
   cursor: pointer;
-  text-align: left;
-  text-transform: capitalize;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 3px;
-  padding-bottom: 3px;
+  box-shadow: 1px 1px 1px #000000, 0 0 1px #0d0d0d;
+  background: #EAEAEA !important;
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
 }
-.buttonPluginPopUp.playlistPlugin .videobutton:hover {
-  background-color: #FF4C4C;
+/* Scrollbar selector - Google Chrome */
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 18px !important;
+  width: 18px !important;
+  border-radius: 50% !important;
+  background: #ec971f !important;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -7px !important;
 }
-.buttonPluginPopUp.playlistPlugin .videobutton.playing {
-  font-style: italic;
-  font-weight: bold;
-  padding-left: 15px;
+/* Scrollbar - Firefox */
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 5px !important;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px #000000, 0 0 1px #0d0d0d;
+  background: #EAEAEA !important;
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+}
+/* Scrollbar selector - Firefox */
+input[type=range]::-moz-range-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 18px !important;
+  width: 18px !important;
+  border-radius: 50% !important;
+  background: #ec971f !important;
+  cursor: pointer;
+  margin-top: -7px !important;
+}
+/* Scrollbar && Scrollbar selector - IE11 */
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 5px !important;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px #000000, 0 0 1px #0d0d0d;
+  background: #EAEAEA !important;
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+}
+input[type=range]::-ms-fill-lower {
+  background: #cc0000;
+  border: 0.2px solid #010101;
+  border-radius: 2.6px;
+  box-shadow: 1px 1px 1px #000000, 0 0 1px #0d0d0d;
+}
+input[type=range]::-ms-fill-upper {
+  background: #cc0000;
+  border: 0.2px solid #010101;
+  border-radius: 2.6px;
+  box-shadow: 1px 1px 1px #000000, 0 0 1px #0d0d0d;
+}
+input[type=range]::-ms-thumb {
+  box-shadow: 1px 1px 1px #000000, 0 0 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 18px !important;
+  width: 18px !important;
+  border-radius: 50% !important;
+  background: #ec971f !important;
+  cursor: pointer;
+  margin-top: -7px !important;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #cc0000;
+  outline: none;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #cc0000;
+  outline: none;
 }
 .buttonPlugin.arrowSlideNavidator.nextButton {
   pointer-events: all !important;
