--- a/Resources/public/paella/player/resources/style/style_light_small.css
+++ b/Resources/public/paella/player/resources/style/style_light_small.css
@@ -2259,6 +2259,15 @@ a.btn {
 .buttonPlugin.flexSkip_Forward_30 {
   background-position: -200% 22%;
 }
+.layout_button,
+.fullscreen_button {
+  pointer-events: all !important;
+  float: right;
+  width: 35px;
+  height: 35px;
+  font-size: 20px;
+  text-shadow: 0 0 8px white;
+}
 .integratedDurationButton {
   width: 112px !important;
   color: white !important;
@@ -2383,23 +2392,6 @@ input[type=range]:focus::-ms-fill-upper {
   bottom: 0px;
   right: 0px;
 }
-.buttonPlugin.audioLanguages {
-  text-align: center;
-  background-position: -900% -200%;
-  font-size: 0.8em;
-  line-height: 20px;
-  color: black;
-  text-transform: uppercase;
-}
-.videoAudioTrackItem {
-  padding: 10px;
-  font-size: 20px;
-  text-transform: uppercase;
-  cursor: pointer;
-}
-.videoAudioTrackItem:hover {
-  background-color: #cc0000;
-}
 .blackBoardDiv {
   position: absolute;
   /* 16:9 */
@@ -2419,6 +2411,23 @@ input[type=range]:focus::-ms-fill-upper {
 }
 #overlayContainer div.lensContainer {
   pointer-events: all;
+}
+.buttonPlugin.audioLanguages {
+  text-align: center;
+  background-position: -900% -200%;
+  font-size: 0.8em;
+  line-height: 20px;
+  color: black;
+  text-transform: uppercase;
+}
+.videoAudioTrackItem {
+  padding: 10px;
+  font-size: 20px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+.videoAudioTrackItem:hover {
+  background-color: #cc0000;
 }
 .textBreak {
   background-color: rgba(128, 128, 128, 0.7);
@@ -2671,21 +2680,6 @@ textarea {
 .extendedTabAdapterPlugin > .tabsPluginContainer > .tabsContentContainer > .tabContent.disabled {
   display: none;
 }
-.buttonPlugin.footPrints {
-  background-position: -700% 0%;
-}
-.footPrintsContainer {
-  height: 20px;
-  width: 100%;
-  overflow: hidden;
-  display: block;
-}
-.footPrintsCanvas {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  display: inline-block;
-}
 .frameControlContainer {
   height: 87px;
   width: 90%;
@@ -2805,6 +2799,21 @@ textarea {
 }
 .enabledFrameThumbnail:hover {
   border: 3px #fa8533 solid;
+}
+.buttonPlugin.footPrints {
+  background-position: -700% 0%;
+}
+.footPrintsContainer {
+  height: 20px;
+  width: 100%;
+  overflow: hidden;
+  display: block;
+}
+.footPrintsCanvas {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  display: inline-block;
 }
 .buttonPlugin.showFullScreenButton {
   background-position: -900% 0%;
@@ -2933,6 +2942,60 @@ textarea {
 .rateButtons .starButton:first-of-type {
   margin-left: 19px;
 }
+.buttonPlugin.showSocialPluginButton {
+  background-position: -800% 0%;
+}
+.buttonPluginPopUp.showSocialPluginButton {
+  background-image: none;
+}
+.socialItemButton {
+  /*crea el popup*/
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  background-image: url(../images/paella_icons_dark.png);
+  background-size: 2000% 1000%;
+  background-position: 0px 0px;
+}
+.socialItemButton.selected {
+  /*background-color: rgba(90,90,90,0.8);
+	border: 3px solid #23ff00;*/
+  background-color: rgba(90, 90, 90, 0.8);
+  box-shadow: inset 0px 0px 2px 2px #fa8533;
+}
+.socialItemButton:hover {
+  background-color: #faa166;
+}
+.socialItemButton.facebook {
+  background-position: -1600% 0%;
+}
+.socialItemButton.twitter {
+  background-position: -1400% 0%;
+}
+.socialItemButton.embed {
+  background-position: -1500% 0%;
+}
+.embedSizeButton {
+  display: inline-block;
+  background-color: #fa8533;
+  border: 1px solid #313135;
+  border-radius: 10px;
+  cursor: pointer;
+  margin-right: 5px;
+  vertical-align: middle;
+  font-size: 14px;
+  text-align: center;
+  color: white;
+}
+.embedSizeInput {
+  background-color: #ffffff;
+  width: 40px;
+  height: 20px;
+  color: #000000;
+  font-size: 12px;
+  margin: 0px;
+  padding: 0px;
+}
 .buttonPlugin.searchButton {
   background-size: 2000% 1000%;
   background-position: -900% -100%;
@@ -3029,60 +3092,6 @@ svg rect {
 }
 .noResults {
   margin: 5px;
-}
-.buttonPlugin.showSocialPluginButton {
-  background-position: -800% 0%;
-}
-.buttonPluginPopUp.showSocialPluginButton {
-  background-image: none;
-}
-.socialItemButton {
-  /*crea el popup*/
-  width: 20px;
-  height: 20px;
-  cursor: pointer;
-  background-image: url(../images/paella_icons_dark.png);
-  background-size: 2000% 1000%;
-  background-position: 0px 0px;
-}
-.socialItemButton.selected {
-  /*background-color: rgba(90,90,90,0.8);
-	border: 3px solid #23ff00;*/
-  background-color: rgba(90, 90, 90, 0.8);
-  box-shadow: inset 0px 0px 2px 2px #fa8533;
-}
-.socialItemButton:hover {
-  background-color: #faa166;
-}
-.socialItemButton.facebook {
-  background-position: -1600% 0%;
-}
-.socialItemButton.twitter {
-  background-position: -1400% 0%;
-}
-.socialItemButton.embed {
-  background-position: -1500% 0%;
-}
-.embedSizeButton {
-  display: inline-block;
-  background-color: #fa8533;
-  border: 1px solid #313135;
-  border-radius: 10px;
-  cursor: pointer;
-  margin-right: 5px;
-  vertical-align: middle;
-  font-size: 14px;
-  text-align: center;
-  color: white;
-}
-.embedSizeInput {
-  background-color: #ffffff;
-  width: 40px;
-  height: 20px;
-  color: #000000;
-  font-size: 12px;
-  margin: 0px;
-  padding: 0px;
 }
 .videoLoadTest {
   background-color: #ffcc66;
