--- a/Resources/views/Conf/conf.json.twig
+++ b/Resources/views/Conf/conf.json.twig
@@ -13,9 +13,9 @@
 
 
         "deprecated-methods":[{"name":"streaming","enabled":true},
-                   {"name":"html","enabled":true},
-                   {"name":"flash","enabled":true},
-                   {"name":"image","enabled":true}],
+            {"name":"html","enabled":true},
+            {"name":"flash","enabled":true},
+            {"name":"image","enabled":true}],
 
         "methods":[
             { "factory":"ChromaVideoFactory", "enabled":false },
@@ -76,6 +76,7 @@
             "es.teltek.paella.playlistPlugin":  {"enabled":true, "playlistApi":"/paellaplaylist"},
             "es.teltek.paella.integratedDurationPlugin": {"enabled":true},
             "es.teltek.paella.simpleSoundControlPlugin": {"enabled":true},
+            "es.teltek.paella.advanceViewModePlugin": {"enabled":true},
             "es.upv.paella.captionsPlugin": {"enabled":true, "searchOnCaptions":true},
             "es.upv.paella.extendedTabAdapterPlugin": {"enabled":false},
             "es.upv.paella.footprintsPlugin": {"enabled":true, "skin":"custom", "fillStyle": "green", "strokeStyle": "green"},
@@ -85,7 +86,7 @@
             "es.upv.paella.multipleQualitiesPlugin": {"enabled":true, "showWidthRes":true},
             "es.upv.paella.playbackRatePlugin": {"enabled":true, "availableRates": [0.75, 1, 1.25, 1.5]},
             "es.upv.paella.playPauseButtonPlugin": {"enabled":true},
-            "es.upv.paella.searchPlugin": {"enabled":true, "sortType":"time", "colorSearch":false},
+            "es.upv.paella.searchPlugin": {"enabled":false, "sortType":"time", "colorSearch":false},
             "es.upv.paella.socialPlugin": {"enabled":false},
             "es.upv.paella.themeChooserPlugin":  {"enabled":false},
             "es.upv.paella.viewModePlugin": { "enabled": true },
@@ -140,7 +141,7 @@
             "es.upv.paella.usertracking.piwikSaverPlugIn": { "enabled": false, "tracker":"http://localhost/piwik/", "siteId": "1" },
             "org.opencast.usertracking.MatomoSaverPlugIn": { "enabled": false, "server": "http://localhost/piwik/", "site_id": 1, "heartbeat": 30, "client_id": "Paella Player" },
             {% if xapi_endpoint and xapi_auth %}
-                 "es.teltek.paella.usertracking.xAPISaverPlugin": {"enabled": true, "endpoint": "{{ xapi_endpoint }}", "auth":"{{ xapi_auth }}"},
+            "es.teltek.paella.usertracking.xAPISaverPlugin": {"enabled": true, "endpoint": "{{ xapi_endpoint }}", "auth":"{{ xapi_auth }}"},
             {% endif %}
             "es.upv.paella.usertracking.elasticsearchSaverPlugin": { "enabled": false, "url": "http://my.elastic.server"},
             "es.upv.paella.usertracking.GoogleAnalyticsSaverPlugIn": { "enabled": false, "trackingID": "UA-XXXXXXXX-Y" }
@@ -152,11 +153,11 @@
         "repository": "../repository/"
     },
     "skin": {
-      "available": [
-        "dark",
-        "dark_small",
-        "light",
-        "light_small"
-      ]
+        "available": [
+            "dark",
+            "dark_small",
+            "light",
+            "light_small"
+        ]
     }
 }
