Hotfix fix variable

--- a/Resources/views/PaellaPlayer/index.html.twig
+++ b/Resources/views/PaellaPlayer/index.html.twig
@@ -60,7 +60,7 @@
             background: none !important;
             border: none !important;
         }
-        {% if object.isMultistream() %}
+        {% if multimediaObject.isMultistream() %}
 
             {# Added while waiting for paella fix TTK-16366 #}
             .captionsBar .editorButton {
