TTK-19456 Fix CSS

--- a/Resources/views/PaellaPlayer/index.html.twig
+++ b/Resources/views/PaellaPlayer/index.html.twig
@@ -96,7 +96,7 @@
                 display: none !important;
             }
 
-            #buttonPlugin8_timeline {
+            #playerContainer_controls_playback_timelinePluginContainer  .buttonTimeLine {
                 display: block !important;
                 bottom: 5px !important;
                 height: 60px;
