TTK-19456 new iteration II

--- a/Resources/views/PaellaPlayer/advance.css.twig
+++ b/Resources/views/PaellaPlayer/advance.css.twig
@@ -37,6 +37,10 @@
         display: none !important;
     }
 
+    .buttonPlugin.frameControl {
+        display: none !important;
+    }
+
     #playerContainer_controls_playback_timelinePluginContainer  .buttonTimeLine.frameControl {
         display: block !important;
         bottom: 1px !important;
