TTK-19456 new iteration III

--- a/Resources/views/PaellaPlayer/advance.css.twig
+++ b/Resources/views/PaellaPlayer/advance.css.twig
@@ -29,7 +29,7 @@
     }
 
     #playerContainer_controls_playback_timelinePluginContainer {
-        bottom: 59px !important;
+        height: 59px !important;
         background-color: rgba(0, 0, 0, 0.45);
     }
 
