TTK-19456 Fix advanded get parameter

--- a/Resources/views/PaellaPlayer/index.html.twig
+++ b/Resources/views/PaellaPlayer/index.html.twig
@@ -57,8 +57,10 @@
     touch-action: auto !important;
   }
 
-  {{ include('PumukitBasePlayerBundle:PaellaPlayer:advance.css.twig') }}
-   
+   {% if 'advanced' in app.request.headers.get('referer') %}
+       {{ include('PumukitBasePlayerBundle:PaellaPlayer:advance.css.twig') }}
+   {% endif %}
+
   </style>
 {% endblock %}
 
