TTK-19456 fix get query parameter

--- a/Resources/views/PaellaPlayer/index.html.twig
+++ b/Resources/views/PaellaPlayer/index.html.twig
@@ -57,8 +57,8 @@
     touch-action: auto !important;
   }
 
-   {% if 'advanced' in app.request.query.get('referer') %}
-       {{ include('PumukitBasePlayerBundle:PaellaPlayer:advance.css.twig') }}
+   {% if app.request.query.has('advanced') %}
+       {% include('PumukitPaellaPlayerBundle:PaellaPlayer:advance.css.twig') %}
    {% endif %}
 
   </style>
