--- a/Resources/public/paella/player/resources/style/style_light.css
+++ b/Resources/public/paella/player/resources/style/style_light.css
@@ -2315,6 +2315,16 @@ a.btn {
   width: 100px;
   background: transparent !important;
 }
+@media (max-width: 768px) {
+  .simpleSoundButton {
+    display: block;
+    width: 30px;
+    background: transparent !important;
+  }
+  .simpleSoundButton .range {
+    display: none;
+  }
+}
 .range {
   width: 70%;
   float: right;
