--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -133,7 +133,7 @@
             const skipContainer = document.createElement("div");
             const overlay = document.createElement("overlay");
 
-            intro.src = "{{ asset(intro, absolute=true) }}";
+            intro.src = "{{ absolute_url(intro) }}";
             intro.poster = "{{ multimediaObject|first_url_pic(true) }}";
             intro.id = "intro";
             intro.addEventListener('ended', onEndedVideo);
